TriggerScriptTest updates